# iceberg-rust

./: .asf.yaml  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  .typos.toml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.html  CONTRIBUTING.md  Cargo.toml  DELETION_VECTORS_ANALYSIS.md  DELETION_VECTOR_TEST_COVERAGE.md  Makefile  NOTICE  README.md  Roadmap.md  SECURITY-THREAT-MODEL.md  api.html  deny.toml  download.html  feedback.md  index.html  install.html  introduction.html  justfile  mise.toml  print.html  release.html  rust-toolchain.toml  rustfmt.toml  searchindex.js  searchindex.json  temp.rs
bindings/c/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml
bindings/c/include/: iceberg.h
bindings/c/src/: lib.rs  specs.rs
bindings/python/: Cargo.toml  DEPENDENCIES.rust.tsv  Makefile  README.md  mise.toml  project-description.md  pyproject.toml
bindings/python/python/pyiceberg_core/: datafusion.pyi
bindings/python/src/: catalog.rs  data_file.rs  datafusion_table_provider.rs  error.rs  lib.rs  manifest.rs  runtime.rs  table_provider.rs  transform.rs
bindings/python/tests/: conftest.py  datafusion_test_utils.py  test_basic.py  test_datafusion_table_provider.py  test_datafusion_test_utils.py  test_huggingface_and_cdc.py  test_manifest.py  test_table_provider.py  test_transform.py
crates/catalog/dynamodb/: Cargo.toml  README.md
crates/catalog/dynamodb/src/: catalog.rs  lib.rs  (+1 more)
crates/catalog/hms/: Cargo.toml  DEPENDENCIES.rust.tsv  README.md  public-api.txt
crates/catalog/loader/: Cargo.toml  DEPENDENCIES.rust.tsv  public-api.txt
crates/catalog/rest/: Cargo.toml  DEPENDENCIES.rust.tsv  README.md  public-api.txt
crates/catalog/s3tables/: Cargo.toml  DEPENDENCIES.rust.tsv  public-api.txt
crates/catalog/sql/: Cargo.toml  DEPENDENCIES.rust.tsv  README.md  public-api.txt
crates/examples/: Cargo.toml  DEPENDENCIES.rust.tsv
crates/examples/src/: datafusion_external_table.rs  datafusion_incremental_read.rs  datafusion_integration.rs  datafusion_read_data.rs  datafusion_read_static_table.rs  encryption_round_trip.rs  geo_rest_catalog.rs  oss_backend.rs  rest_catalog_namespace.rs  rest_catalog_read_data.rs  rest_catalog_table.rs  utils.rs
crates/iceberg/: Cargo.toml  DEPENDENCIES.rust.tsv  README.md  public-api.txt
crates/iceberg-rest-catalog-client/: .gitignore  .openapi-generator-ignore  Cargo.toml  README.md
crates/iceberg-rest-catalog-client/.openapi-generator/: FILES
crates/iceberg-rest-catalog-client/docs/: AddPartitionSpecUpdate.md  AddPartitionSpecUpdateAllOf.md  AddSchemaUpdate.md  AddSchemaUpdateAllOf.md  AddSnapshotUpdate.md  AddSnapshotUpdateAllOf.md  AddSortOrderUpdate.md  AddSortOrderUpdateAllOf.md  AndOrExpression.md  BaseUpdate.md  CatalogApiApi.md  CatalogConfig.md  CommitReport.md  CommitTableRequest.md  CommitTableResponse.md  ConfigurationApiApi.md  CounterResult.md  CreateNamespaceRequest.md  CreateNamespaceResponse.md  CreateTableRequest.md  ErrorModel.md  Expression.md  GetNamespaceResponse.md  IcebergErrorResponse.md  ListNamespacesResponse.md  ListTablesResponse.md  ListType.md  LiteralExpression.md  LoadTableResult.md  MapType.md  MetadataLogInner.md  MetricResult.md  NotExpression.md  NullOrder.md  OAuth2ApiApi.md  OAuthError.md  OAuthTokenResponse.md  PartitionField.md  PartitionSpec.md  RemovePropertiesUpdate.md  (+45 more)
crates/iceberg-rest-catalog-client/src/: lib.rs
crates/iceberg/benches/: arrow_reader.rs  table_scan_execute_query.rs  table_scan_plan_files.rs  utils.rs
crates/iceberg/examples/: compaction_benchmark.rs
crates/iceberg/src/: arrow.rs  cache.rs  catalog.rs  compression.rs  delete_file_index.rs  delete_vector.rs  error.rs  file_record_batch_reader.rs  future_util.rs  io.rs  lib.rs  maintenance.rs  metadata_columns.rs  metadata_scan.rs  metadata_table.rs  metrics.rs  partitioning.rs  rest.rs  scan.rs  table.rs  test_utils.rs  traced_stream.rs  transaction.rs  utils.rs  view.rs
crates/iceberg/testdata/: example_table_metadata_v2.json  example_table_metadata_v2_deep_history.json  example_table_metadata_v2_deep_history_compaction.json  example_table_metadata_v2_deep_history_stale_schema.json  example_table_metadata_v2_partition_evolution.json  partition_manifest_v1.avro  partition_manifest_v2.avro  simple_manifest_list_v1.avro  simple_manifest_list_v2.avro  unpartition_manifest_v2.avro
crates/iceberg/tests/: cleanup_expired_files_hrtb.rs  deletion_vector_comprehensive_test.rs  deletion_vector_integration_test.rs  encryption_integration_test.rs  file_io_gcs_test.rs  file_io_s3_test.rs  interop_cherrypick.rs  interop_dv_replace.rs  interop_dv_scan.rs  interop_dv_table.rs  interop_dv_write.rs  interop_expire.rs  interop_inspection.rs  interop_inspection_manifests.rs  interop_manage_snapshots.rs  interop_multi_spec.rs  interop_partition_stats.rs  interop_rowdelta_meta.rs  interop_scan_exec.rs  interop_staged_wap.rs  interop_theta.rs  interop_update_partition_spec.rs  interop_update_schema.rs  interop_view.rs  interop_wap_data.rs  interop_write_actions_meta.rs  interop_write_data.rs  map.md  partition_table_test.rs  read_performance_test.rs  remove_orphan_files.rs  runtime_handle_test.rs
crates/integrations/aws/: Cargo.toml  DEPENDENCIES.rust.tsv  public-api.txt
crates/integrations/ballista/: Cargo.toml  DEPENDENCIES.rust.tsv  public-api.txt
crates/integrations/cli/: Cargo.toml  DEPENDENCIES.rust.tsv  README.md
crates/integrations/playground/: Cargo.toml  DEPENDENCIES.rust.tsv
crates/sqllogictest/: Cargo.toml  DEPENDENCIES.rust.tsv  README.md
crates/sqllogictest/examples/: example_catalog_config.toml.example
crates/sqllogictest/src/: error.rs  lib.rs  schedule.rs
crates/sqllogictest/tests/: sqllogictests.rs
crates/sqllogictests/: Cargo.toml
crates/sqllogictests/src/: error.rs  lib.rs  schedule.rs
crates/sqllogictests/tests/: sqllogictests.rs
crates/storage/common/: Cargo.toml
crates/storage/opendal/: Cargo.toml  DEPENDENCIES.rust.tsv  README.md  public-api.txt
patches/motore-macros/: Cargo.toml  README.md
patches/motore-macros/src/: lib.rs
(+14396 files in other folders)
