# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
exclude = ["bindings/python"]
members = [
  "crates/catalog/*",
  "crates/examples",
  "crates/iceberg",
  "crates/integration_tests",
  "crates/integrations/*",
  "crates/sqllogictest",
  "crates/test_utils",
]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://rust.iceberg.apache.org/"
version = "0.4.0"

license = "Apache-2.0"
repository = "https://github.com/apache/iceberg-rust"
# Check the MSRV policy in README.md before changing this
rust-version = "1.84"

[workspace.dependencies]
anyhow = "1.0.72"
apache-avro = "0.17"
array-init = "2"
arrow-arith = { version = "54.2.0" }
arrow-array = { version = "54.2.0" }
arrow-buffer = { version = "54.2.0" }
arrow-cast = { version = "54.2.0" }
arrow-ord = { version = "54.2.0" }
arrow-schema = { version = "54.2.0" }
arrow-select = { version = "54.2.0" }
arrow-string = { version = "54.2.0" }
async-std = "1.12"
async-trait = "0.1.86"
aws-config = "1.5"
aws-sdk-glue = "1.39"
bimap = "0.6"
bytes = "1.9"
chrono = "0.4.38"
clap = { version = "4.5.27", features = ["derive", "cargo"] }
ctor = "0.2.8"
datafusion = "45"
datafusion-cli = "45"
datafusion-sqllogictest = "45"
derive_builder = "0.20"
dirs = "6"
enum-ordinalize = "4.3.0"
expect-test = "1"
faststr = "0.2.31"
fnv = "1.0.7"
fs-err = "3.1.0"
futures = "0.3"
hive_metastore = "0.1"
http = "1.1"
iceberg = { version = "0.4.0", path = "./crates/iceberg" }
iceberg-catalog-memory = { version = "0.4.0", path = "./crates/catalog/memory" }
iceberg-catalog-rest = { version = "0.4.0", path = "./crates/catalog/rest" }
iceberg-datafusion = { version = "0.4.0", path = "./crates/integrations/datafusion" }
indicatif = "0.17"
itertools = "0.13"
linkedbytes = "0.1.8"
metainfo = "0.7.14"
mimalloc = "0.1.46"
mockito = "1"
murmur3 = "0.5.2"
num-bigint = "0.4.6"
once_cell = "1.20"
opendal = "0.53.0"
ordered-float = "4"
parquet = "54.2.0"
pilota = "0.11.2"
port_scanner = "0.1.5"
pretty_assertions = "1.4"
rand = "0.8.5"
regex = "1.10.5"
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
roaring = { version = "0.10", git = "https://github.com/RoaringBitmap/roaring-rs.git" }
rust_decimal = "1.36"
serde = { version = "1.0.204", features = ["rc"] }
serde_bytes = "0.11.15"
serde_derive = "1.0.204"
serde_json = "1.0.138"
serde_repr = "0.1.16"
serde_with = "3.4"
sqllogictest = "0.26.4"
stacker = "0.1.20"
tempfile = "3.18"
tera = "1"
thrift = "0.17.0"
tokio = { version = "1.44", default-features = false }
toml = "0.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.8"
typed-builder = "0.20"
url = "2.5.4"
uuid = { version = "1.14", features = ["v7"] }
volo = "0.10.6"
volo-thrift = "0.10.6"
zstd = "0.13.2"
