# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
exclude = ["bindings/python"]
members = [
  "crates/catalog/*",
  "crates/examples",
  "crates/iceberg",
  "crates/integration_tests",
  "crates/integrations/*",
  "crates/sqllogictest",
  "crates/test_utils",
]
resolver = "2"

[workspace.package]
edition = "2024"
homepage = "https://rust.iceberg.apache.org/"
version = "0.7.0"

license = "Apache-2.0"
repository = "https://github.com/apache/iceberg-rust"
# Check the MSRV policy in README.md before changing this
rust-version = "1.87"

[workspace.dependencies]
anyhow = "1.0.72"
apache-avro = { version = "0.20", features = ["zstandard"] }
array-init = "2"
arrow-arith = { version = "55.1" }
arrow-array = { version = "55.1" }
arrow-buffer = { version = "55.1" }
arrow-cast = { version = "55.1" }
arrow-ord = { version = "55.1" }
arrow-schema = { version = "55.1" }
arrow-select = { version = "55.1" }
arrow-string = { version = "55.1" }
as-any = "0.3.2"
async-trait = "0.1.88"
aws-config = "1.8.1"
aws-sdk-glue = "1.39"
aws-sdk-s3tables = "1.28.0"
backon = "1.5.1"
base64 = "0.22.1"
bimap = "0.6"
bytes = "1.10"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive", "cargo"] }
ctor = "0.2.8"
datafusion = "48.0.1"
datafusion-cli = "48.0.1"
datafusion-sqllogictest = "48.0.1"
derive_builder = "0.20"
dirs = "6"
enum-ordinalize = "4.3.0"
expect-test = "1"
faststr = "0.2.31"
fnv = "1.0.7"
fs-err = "3.1.0"
futures = "0.3"
hive_metastore = "0.2.0"
http = "1.2"
iceberg = { version = "0.7.0", path = "./crates/iceberg" }
iceberg-catalog-rest = { version = "0.7.0", path = "./crates/catalog/rest" }
iceberg-catalog-glue = { version = "0.7.0", path = "./crates/catalog/glue" }
iceberg-catalog-s3tables = { version = "0.7.0", path = "./crates/catalog/s3tables" }
iceberg-catalog-hms = { version = "0.7.0", path = "./crates/catalog/hms" }
iceberg-datafusion = { version = "0.7.0", path = "./crates/integrations/datafusion" }
indicatif = "0.17"
itertools = "0.13"
linkedbytes = "0.1.8"
metainfo = "0.7.14"
mimalloc = "0.1.46"
mockall = "0.13.1"
mockito = "1"
motore-macros = "0.4.3"
murmur3 = "0.5.2"
num-bigint = "0.4.6"
once_cell = "1.20"
opendal = "0.54.0"
ordered-float = "4"
parquet = "55.1"
pilota = "0.11.10"
port_scanner = "0.1.5"
pretty_assertions = "1.4"
rand = "0.8.5"
regex = "1.10.5"
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
roaring = { version = "0.11" }
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["rc"] }
serde_bytes = "0.11.17"
serde_derive = "1.0.219"
serde_json = "1.0.142"
serde_repr = "0.1.16"
serde_with = "3.4"
smol = "2.0.2"
sqllogictest = "0.28.3"
stacker = "0.1.20"
strum = "0.27.2"
tempfile = "3.18"
tera = "1"
thrift = "0.17.0"
tokio = { version = "1.46.1", default-features = false }
toml = "0.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.8"
typed-builder = "0.20"
url = "2.5.4"
uuid = { version = "1.18", features = ["v7"] }
volo = "0.10.6"
volo-thrift = "0.10.8"
zstd = "0.13.3"
