# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "pyiceberg_core_rust"
version = "0.4.0"
edition = "2021"
homepage = "https://rust.iceberg.apache.org"
rust-version = "1.77.1"
# This crate is used to build python bindings, we don't want to publish it
publish = false

license = "Apache-2.0"
keywords = ["iceberg"]

[lib]
crate-type = ["cdylib"]

[dependencies]
iceberg = { path = "../../crates/iceberg" }
pyo3 = { version = "0.22.3", features = ["extension-module", "abi3-py39"] }
arrow = { version = "53", features = ["pyarrow"] }
