# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
edition = "2024"
homepage = "https://rust.iceberg.apache.org"
name = "pyiceberg_core_rust"
rust-version = "1.92"
version = "0.9.0"
# This crate is used to build python bindings, we don't want to publish it
publish = false

keywords = ["iceberg"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "58", features = ["pyarrow", "chrono-tz"] }
iceberg = { path = "../../crates/iceberg" }
iceberg-storage-opendal = { path = "../../crates/storage/opendal", features = ["opendal-all"] }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
iceberg-datafusion = { path = "../../crates/integrations/datafusion" }
datafusion-ffi = { version = "53" }
datafusion-python-util = { git = "https://github.com/apache/datafusion-python.git", rev = "0be1501a4422122f98b1e06424f696be3ef21ff1", package = "datafusion-python-util" }
tokio = { version = "1.46.1", default-features = false }

[build-dependencies]
pyo3-build-config = "0.28"

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = "z"
strip = true

[patch.crates-io]
datafusion = { git = "https://github.com/apache/datafusion.git", rev = "35749607f585b3bf25b66b7d2289c56c18d03e4f" }
datafusion-substrait = { git = "https://github.com/apache/datafusion.git", rev = "35749607f585b3bf25b66b7d2289c56c18d03e4f" }
datafusion-proto = { git = "https://github.com/apache/datafusion.git", rev = "35749607f585b3bf25b66b7d2289c56c18d03e4f" }
datafusion-ffi = { git = "https://github.com/apache/datafusion.git", rev = "35749607f585b3bf25b66b7d2289c56c18d03e4f" }
datafusion-catalog = { git = "https://github.com/apache/datafusion.git", rev = "35749607f585b3bf25b66b7d2289c56c18d03e4f" }
datafusion-common = { git = "https://github.com/apache/datafusion.git", rev = "35749607f585b3bf25b66b7d2289c56c18d03e4f" }
datafusion-functions-aggregate = { git = "https://github.com/apache/datafusion.git", rev = "35749607f585b3bf25b66b7d2289c56c18d03e4f" }
datafusion-functions-window = { git = "https://github.com/apache/datafusion.git", rev = "35749607f585b3bf25b66b7d2289c56c18d03e4f" }
datafusion-expr = { git = "https://github.com/apache/datafusion.git", rev = "35749607f585b3bf25b66b7d2289c56c18d03e4f" }

[package.metadata.cargo-machete]
ignored = []
