# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
edition = { workspace = true }
homepage = { workspace = true }
name = "pyiceberg_core_rust"
# This crate is used to build python bindings, we don't want to publish it
publish = false
rust-version = { workspace = true }
version = { workspace = true }

categories = ["database"]
description = "Apache Iceberg Python Bindings"
keywords = ["iceberg", "python", "bindings"]
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow = { workspace = true, features = ["pyarrow"] }
datafusion-ffi = { workspace = true }
iceberg = { workspace = true }
iceberg-datafusion = { workspace = true }
iceberg-storage-opendal = { workspace = true, features = ["opendal-all"] }
pyo3 = { workspace = true, features = ["abi3-py310"] }
tokio = { workspace = true }

[package.metadata.cargo-machete]
ignored = []
