# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "iceberg-examples"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = { workspace = true }
geo-types = "0.7.17"
geojson = "0.24"
iceberg = { workspace = true }
iceberg-catalog-rest = { workspace = true }
parquet.workspace = true
tokio = { workspace = true, features = ["full"] }
wkb = "0.9.1"

[[example]]
name = "rest-catalog-namespace"
path = "src/rest_catalog_namespace.rs"

[[example]]
name = "rest-catalog-table"
path = "src/rest_catalog_table.rs"

[[example]]
name = "oss-backend"
path = "src/oss_backend.rs"
required-features = ["storage-oss"]

[[example]]
name = "geo-rest-catalog"
path = "src/geo_rest_catalog.rs"


[features]
default = []
storage-oss = ["iceberg/storage-oss"]
