# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iceberg"
version = "0.1.0"
edition = "2021"

categories = ["database"]
description = "Apache Iceberg Rust implementation"
repository = "https://github.com/apache/iceberg-rust"
license = "Apache-2.0"
keywords = ["iceberg"]

[dependencies]
anyhow = "1.0.72"
apache-avro = "0.15"
async-trait = "0.1"
bimap = "0.6"
bitvec = "1.0.1"
chrono = "0.4"
derive_builder = "0.12.0"
either = "1"
futures = "0.3"
itertools = "0.11"
lazy_static = "1"
once_cell = "1"
opendal = "0.39"
ordered-float = "3.7.0"
rust_decimal = "1.31.0"
serde = { version = "^1.0", features = ["rc"] }
serde_bytes = "0.11.8"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_repr = "0.1.16"
url = "2"
uuid = "1.4.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempdir = "0.3"
tokio = { version = "1", features = ["macros"] }
