# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "iceberg-sqllogictest"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true }
datafusion-sqllogictest = { workspace = true }
enum-ordinalize = { workspace = true }
indicatif = { workspace = true }
iceberg = { workspace = true }
iceberg_test_utils = { path = "../test_utils", features = ["tests"] }
iceberg-catalog-rest = { workspace = true }
iceberg-datafusion = { workspace = true }
sqllogictest = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
env_logger = "0.11.8"
log = "0.4.25"
itertools = "0.13.0"
spark-connect-rs = { git = "https://github.com/apache/spark-connect-rust.git", rev = "061cb3ecb187b039141f20c722c7984e915f3b9d" }
#spark-connect-rs = "0.0.2"

[dev-dependencies]
libtest-mimic = "0.7.3"
async-stream = ">=0.3.5, <0.4"

[[test]]
harness = false
name = "sqllogictests"
path = "tests/sqllogictests.rs"

[package.metadata.cargo-machete]
# These dependencies are added to ensure minimal dependency version
ignored = ["enum-ordinalize"]
